Python to Dalvik Compiler/CodigosTeste/AnalisadorSintaticoMenhir/Menhir/sintatico.automaton
State 0:
programa' -> . programa [ # ]
-- On WHILE shift to state 1
-- On RETURN shift to state 53
-- On PRINT shift to state 57
-- On INPUTS shift to state 60
-- On INPUTI shift to state 62
-- On INPUTF shift to state 64
-- On IF shift to state 66
-- On ID shift to state 71
-- On FOR shift to state 75
-- On DEF shift to state 131
-- On retorno shift to state 85
-- On programa shift to state 155
-- On print shift to state 86
-- On loopWhile shift to state 88
-- On loopFOR shift to state 89
-- On list(instrucao) shift to state 156
-- On leias shift to state 90
-- On leiai shift to state 92
-- On leiaf shift to state 94
-- On instrucao shift to state 158
-- On funcao shift to state 160
-- On condicaoIF shift to state 96
-- On comando shift to state 161
-- On chamadafuncao shift to state 101
-- On chamada shift to state 102
-- On atribuicao shift to state 104
-- On EOF reduce production list(instrucao) -> 

State 1:
loopWhile -> WHILE . exprLogicoAritmetica DPONTOS NOVALINHA INDENTA comandos DEDENTA [ WHILE RETURN PRINT INPUTS INPUTI INPUTF IF ID FOR EOF DEF DEDENTA ]
-- On TRUE shift to state 2
-- On NOT shift to state 3
-- On MENOS shift to state 4
-- On LITSTRING shift to state 5
-- On LITINT shift to state 6
-- On LITFLOAT shift to state 7
-- On ID shift to state 8
-- On FALSE shift to state 10
-- On APAR shift to state 11
-- On exprLogicoAritmetica shift to state 49
-- On chamada shift to state 15

State 2:
exprLogicoAritmetica -> TRUE . [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On VIRG reduce production exprLogicoAritmetica -> TRUE 
-- On VEZES reduce production exprLogicoAritmetica -> TRUE 
-- On OU reduce production exprLogicoAritmetica -> TRUE 
-- On NOVALINHA reduce production exprLogicoAritmetica -> TRUE 
-- On MODULO reduce production exprLogicoAritmetica -> TRUE 
-- On MENOS reduce production exprLogicoAritmetica -> TRUE 
-- On MENORIGUAL reduce production exprLogicoAritmetica -> TRUE 
-- On MENOR reduce production exprLogicoAritmetica -> TRUE 
-- On MAIS reduce production exprLogicoAritmetica -> TRUE 
-- On MAIORIGUAL reduce production exprLogicoAritmetica -> TRUE 
-- On MAIOR reduce production exprLogicoAritmetica -> TRUE 
-- On IN reduce production exprLogicoAritmetica -> TRUE 
-- On IGUALDADE reduce production exprLogicoAritmetica -> TRUE 
-- On FPAR reduce production exprLogicoAritmetica -> TRUE 
-- On E reduce production exprLogicoAritmetica -> TRUE 
-- On DPONTOS reduce production exprLogicoAritmetica -> TRUE 
-- On DIVIDIDO reduce production exprLogicoAritmetica -> TRUE 
-- On DIFERENTE reduce production exprLogicoAritmetica -> TRUE 

State 3:
exprLogicoAritmetica -> NOT . exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On TRUE shift to state 2
-- On NOT shift to state 3
-- On MENOS shift to state 4
-- On LITSTRING shift to state 5
-- On LITINT shift to state 6
-- On LITFLOAT shift to state 7
-- On ID shift to state 8
-- On FALSE shift to state 10
-- On APAR shift to state 11
-- On exprLogicoAritmetica shift to state 48
-- On chamada shift to state 15

State 4:
exprLogicoAritmetica -> MENOS . exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On TRUE shift to state 2
-- On NOT shift to state 3
-- On MENOS shift to state 4
-- On LITSTRING shift to state 5
-- On LITINT shift to state 6
-- On LITFLOAT shift to state 7
-- On ID shift to state 8
-- On FALSE shift to state 10
-- On APAR shift to state 11
-- On exprLogicoAritmetica shift to state 47
-- On chamada shift to state 15

State 5:
exprLogicoAritmetica -> LITSTRING . [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On VIRG reduce production exprLogicoAritmetica -> LITSTRING 
-- On VEZES reduce production exprLogicoAritmetica -> LITSTRING 
-- On OU reduce production exprLogicoAritmetica -> LITSTRING 
-- On NOVALINHA reduce production exprLogicoAritmetica -> LITSTRING 
-- On MODULO reduce production exprLogicoAritmetica -> LITSTRING 
-- On MENOS reduce production exprLogicoAritmetica -> LITSTRING 
-- On MENORIGUAL reduce production exprLogicoAritmetica -> LITSTRING 
-- On MENOR reduce production exprLogicoAritmetica -> LITSTRING 
-- On MAIS reduce production exprLogicoAritmetica -> LITSTRING 
-- On MAIORIGUAL reduce production exprLogicoAritmetica -> LITSTRING 
-- On MAIOR reduce production exprLogicoAritmetica -> LITSTRING 
-- On IN reduce production exprLogicoAritmetica -> LITSTRING 
-- On IGUALDADE reduce production exprLogicoAritmetica -> LITSTRING 
-- On FPAR reduce production exprLogicoAritmetica -> LITSTRING 
-- On E reduce production exprLogicoAritmetica -> LITSTRING 
-- On DPONTOS reduce production exprLogicoAritmetica -> LITSTRING 
-- On DIVIDIDO reduce production exprLogicoAritmetica -> LITSTRING 
-- On DIFERENTE reduce production exprLogicoAritmetica -> LITSTRING 

State 6:
exprLogicoAritmetica -> LITINT . [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On VIRG reduce production exprLogicoAritmetica -> LITINT 
-- On VEZES reduce production exprLogicoAritmetica -> LITINT 
-- On OU reduce production exprLogicoAritmetica -> LITINT 
-- On NOVALINHA reduce production exprLogicoAritmetica -> LITINT 
-- On MODULO reduce production exprLogicoAritmetica -> LITINT 
-- On MENOS reduce production exprLogicoAritmetica -> LITINT 
-- On MENORIGUAL reduce production exprLogicoAritmetica -> LITINT 
-- On MENOR reduce production exprLogicoAritmetica -> LITINT 
-- On MAIS reduce production exprLogicoAritmetica -> LITINT 
-- On MAIORIGUAL reduce production exprLogicoAritmetica -> LITINT 
-- On MAIOR reduce production exprLogicoAritmetica -> LITINT 
-- On IN reduce production exprLogicoAritmetica -> LITINT 
-- On IGUALDADE reduce production exprLogicoAritmetica -> LITINT 
-- On FPAR reduce production exprLogicoAritmetica -> LITINT 
-- On E reduce production exprLogicoAritmetica -> LITINT 
-- On DPONTOS reduce production exprLogicoAritmetica -> LITINT 
-- On DIVIDIDO reduce production exprLogicoAritmetica -> LITINT 
-- On DIFERENTE reduce production exprLogicoAritmetica -> LITINT 

State 7:
exprLogicoAritmetica -> LITFLOAT . [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On VIRG reduce production exprLogicoAritmetica -> LITFLOAT 
-- On VEZES reduce production exprLogicoAritmetica -> LITFLOAT 
-- On OU reduce production exprLogicoAritmetica -> LITFLOAT 
-- On NOVALINHA reduce production exprLogicoAritmetica -> LITFLOAT 
-- On MODULO reduce production exprLogicoAritmetica -> LITFLOAT 
-- On MENOS reduce production exprLogicoAritmetica -> LITFLOAT 
-- On MENORIGUAL reduce production exprLogicoAritmetica -> LITFLOAT 
-- On MENOR reduce production exprLogicoAritmetica -> LITFLOAT 
-- On MAIS reduce production exprLogicoAritmetica -> LITFLOAT 
-- On MAIORIGUAL reduce production exprLogicoAritmetica -> LITFLOAT 
-- On MAIOR reduce production exprLogicoAritmetica -> LITFLOAT 
-- On IN reduce production exprLogicoAritmetica -> LITFLOAT 
-- On IGUALDADE reduce production exprLogicoAritmetica -> LITFLOAT 
-- On FPAR reduce production exprLogicoAritmetica -> LITFLOAT 
-- On E reduce production exprLogicoAritmetica -> LITFLOAT 
-- On DPONTOS reduce production exprLogicoAritmetica -> LITFLOAT 
-- On DIVIDIDO reduce production exprLogicoAritmetica -> LITFLOAT 
-- On DIFERENTE reduce production exprLogicoAritmetica -> LITFLOAT 

State 8:
chamada -> ID . APAR loption(separated_nonempty_list(VIRG,exprLogicoAritmetica)) FPAR [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> ID . [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On APAR shift to state 9
-- On VIRG reduce production exprLogicoAritmetica -> ID 
-- On VEZES reduce production exprLogicoAritmetica -> ID 
-- On OU reduce production exprLogicoAritmetica -> ID 
-- On NOVALINHA reduce production exprLogicoAritmetica -> ID 
-- On MODULO reduce production exprLogicoAritmetica -> ID 
-- On MENOS reduce production exprLogicoAritmetica -> ID 
-- On MENORIGUAL reduce production exprLogicoAritmetica -> ID 
-- On MENOR reduce production exprLogicoAritmetica -> ID 
-- On MAIS reduce production exprLogicoAritmetica -> ID 
-- On MAIORIGUAL reduce production exprLogicoAritmetica -> ID 
-- On MAIOR reduce production exprLogicoAritmetica -> ID 
-- On IN reduce production exprLogicoAritmetica -> ID 
-- On IGUALDADE reduce production exprLogicoAritmetica -> ID 
-- On FPAR reduce production exprLogicoAritmetica -> ID 
-- On E reduce production exprLogicoAritmetica -> ID 
-- On DPONTOS reduce production exprLogicoAritmetica -> ID 
-- On DIVIDIDO reduce production exprLogicoAritmetica -> ID 
-- On DIFERENTE reduce production exprLogicoAritmetica -> ID 

State 9:
chamada -> ID APAR . loption(separated_nonempty_list(VIRG,exprLogicoAritmetica)) FPAR [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On TRUE shift to state 2
-- On NOT shift to state 3
-- On MENOS shift to state 4
-- On LITSTRING shift to state 5
-- On LITINT shift to state 6
-- On LITFLOAT shift to state 7
-- On ID shift to state 8
-- On FALSE shift to state 10
-- On APAR shift to state 11
-- On separated_nonempty_list(VIRG,exprLogicoAritmetica) shift to state 41
-- On loption(separated_nonempty_list(VIRG,exprLogicoAritmetica)) shift to state 42
-- On exprLogicoAritmetica shift to state 44
-- On chamada shift to state 15
-- On FPAR reduce production loption(separated_nonempty_list(VIRG,exprLogicoAritmetica)) -> 

State 10:
exprLogicoAritmetica -> FALSE . [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On VIRG reduce production exprLogicoAritmetica -> FALSE 
-- On VEZES reduce production exprLogicoAritmetica -> FALSE 
-- On OU reduce production exprLogicoAritmetica -> FALSE 
-- On NOVALINHA reduce production exprLogicoAritmetica -> FALSE 
-- On MODULO reduce production exprLogicoAritmetica -> FALSE 
-- On MENOS reduce production exprLogicoAritmetica -> FALSE 
-- On MENORIGUAL reduce production exprLogicoAritmetica -> FALSE 
-- On MENOR reduce production exprLogicoAritmetica -> FALSE 
-- On MAIS reduce production exprLogicoAritmetica -> FALSE 
-- On MAIORIGUAL reduce production exprLogicoAritmetica -> FALSE 
-- On MAIOR reduce production exprLogicoAritmetica -> FALSE 
-- On IN reduce production exprLogicoAritmetica -> FALSE 
-- On IGUALDADE reduce production exprLogicoAritmetica -> FALSE 
-- On FPAR reduce production exprLogicoAritmetica -> FALSE 
-- On E reduce production exprLogicoAritmetica -> FALSE 
-- On DPONTOS reduce production exprLogicoAritmetica -> FALSE 
-- On DIVIDIDO reduce production exprLogicoAritmetica -> FALSE 
-- On DIFERENTE reduce production exprLogicoAritmetica -> FALSE 

State 11:
exprLogicoAritmetica -> APAR . exprLogicoAritmetica FPAR [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On TRUE shift to state 2
-- On NOT shift to state 3
-- On MENOS shift to state 4
-- On LITSTRING shift to state 5
-- On LITINT shift to state 6
-- On LITFLOAT shift to state 7
-- On ID shift to state 8
-- On FALSE shift to state 10
-- On APAR shift to state 11
-- On exprLogicoAritmetica shift to state 12
-- On chamada shift to state 15

State 12:
exprLogicoAritmetica -> exprLogicoAritmetica . MAIS exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MENOS exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . VEZES exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . DIVIDIDO exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MODULO exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . IGUALDADE exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MAIOR exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MAIORIGUAL exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MENOR exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MENORIGUAL exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . DIFERENTE exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . E exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . OU exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> APAR exprLogicoAritmetica . FPAR [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On VEZES shift to state 13
-- On OU shift to state 16
-- On MODULO shift to state 18
-- On MENOS shift to state 20
-- On MENORIGUAL shift to state 24
-- On MENOR shift to state 28
-- On MAIS shift to state 26
-- On MAIORIGUAL shift to state 30
-- On MAIOR shift to state 32
-- On IGUALDADE shift to state 34
-- On FPAR shift to state 40
-- On E shift to state 36
-- On DIVIDIDO shift to state 22
-- On DIFERENTE shift to state 38

State 13:
exprLogicoAritmetica -> exprLogicoAritmetica VEZES . exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On TRUE shift to state 2
-- On NOT shift to state 3
-- On MENOS shift to state 4
-- On LITSTRING shift to state 5
-- On LITINT shift to state 6
-- On LITFLOAT shift to state 7
-- On ID shift to state 8
-- On FALSE shift to state 10
-- On APAR shift to state 11
-- On exprLogicoAritmetica shift to state 14
-- On chamada shift to state 15

State 14:
exprLogicoAritmetica -> exprLogicoAritmetica . MAIS exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MENOS exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . VEZES exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica . [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . DIVIDIDO exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MODULO exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . IGUALDADE exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MAIOR exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MAIORIGUAL exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MENOR exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MENORIGUAL exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . DIFERENTE exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . E exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . OU exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On VIRG reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On VEZES reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On OU reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On NOVALINHA reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On MODULO reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On MENOS reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On MENORIGUAL reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On MENOR reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On MAIS reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On MAIORIGUAL reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On MAIOR reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On IN reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On IGUALDADE reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On FPAR reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On E reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On DPONTOS reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On DIVIDIDO reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On DIFERENTE reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
